HTML5Video interface; adds System.out.println("\0") clears output